syntax = "proto3";

import "google/protobuf/struct.proto";

option java_package = "com.studhub.dataserver.inventory";
option java_multiple_files = true;

package com.studhub.inventory;

option csharp_namespace = "Studhub.Grpc.Data";

message SetBrickLinkInventoryRequest {
  repeated google.protobuf.Struct inventories = 1;
  int32 user_id = 2;
}

message SetBrickLinkInventoryResponse {
  bool is_success = 1;
  string message = 2;
  string error_message = 3;
}

service InventoryService {
  rpc SetBrickLinkInventories(SetBrickLinkInventoryRequest) returns(SetBrickLinkInventoryResponse);
}

